--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.2.1'
     }
 }
 
@@ -20,29 +14,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-    }
-
-    tasks.withType(Javadoc) {
-        options.addStringOption('Xdoclint:none', '-quiet')
-        options.addStringOption('encoding', 'UTF-8')
+        mavenCentral()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-project.ext {
-
-    lib = [
-            //module versions
-            ijksdkVersion = '0.8.8',
-            exoplayersdkVersion = '2.13.2',
-            appcompatVersion = '1.2.0',
-
-            playerbaseIjkVersion = '342_088_012',
-            playerbaseExoVersion = '342_2132_019',
-            playerbaseVersion = '3.4.2'
-    ]
-
 }
